--- a/src/asset/React App.htm
+++ b/src/asset/React App.htm
@@ -554,7 +554,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 .fad.fa-inverse,
 .fa-duotone.fa-inverse {
   color: var(--fa-inverse, #fff);
-}</style><link rel="icon" href="http://localhost:3000/favicon.ico">
+}</style><link rel="icon" href="./logo-portfolio2.jpg" alt="Logo Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Web site created using create-react-app">
